2019-06-06  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-llvm.sh: Provide opportunity to build from monorepo.

2019-06-06  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-gdbserver.sh: Vary parallelism depending on whether on
	laptop, flexibility about location of verilator headers.
	* build-gnu.sh: Vary parallelism depending on whether on
	laptop, specify arch and abi at top of script, specify C flags
	for newlib at top of script.
	* build-llvm.sh: Vary parallelism depending on whether on
	laptop, Record start of building in log file.
	* speed-data.sh: Created.

2019-06-05  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-gdbserver.sh: Change name of gdbserver source dir.

2019-06-05  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-gdbserver.sh: Correct typo in gdbserver config, copy
	header messages to log.
	* build-gnu.sh: Export PATH, enable plugins, more explicit newlib
	build options.
	* build-llvm.sh: Build as release compiler, optimize tablegen,
	enble assertions, link clang/clang++ to target specific versions.
	* size-data.sh: Created.

2019-05-27  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* .gitignore: Created.
	* build-gdbserver.sh: Created.
	* build-gnu.sh: Created.
	* build-llvm.sh: Created.
	* ChangeLog: Created.
	* README.md: Created.